<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmarshall.calculator.MainActivity">

    <TextView
        android:id="@+id/screenTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_vertical"
        android:layout_row="0"
        android:gravity="bottom|end"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/changeBackground"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="0"
        android:layout_row="1"
        android:onClick="onClickChangeBackground"
        android:text="@string/chgColor"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/decimal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="2"
        android:layout_row="5"
        android:onClick="onClickNumberButton"
        android:text="@string/decimal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:onClick="onClickNumberButton"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="0"
        android:layout_row="4"
        android:onClick="onClickNumberButton"
        android:text="@string/one"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="1"
        android:layout_row="4"
        android:onClick="onClickNumberButton"
        android:text="@string/two"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="2"
        android:layout_row="4"
        android:onClick="onClickNumberButton"
        android:text="@string/three"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="0"
        android:layout_row="3"
        android:onClick="onClickNumberButton"
        android:text="@string/four"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="1"
        android:layout_row="3"
        android:onClick="onClickNumberButton"
        android:text="@string/five"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="2"
        android:layout_row="3"
        android:onClick="onClickNumberButton"
        android:text="@string/six"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="0"
        android:layout_row="2"
        android:onClick="onClickNumberButton"
        android:text="@string/seven"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="1"
        android:layout_row="2"
        android:onClick="onClickNumberButton"
        android:text="@string/eight"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="2"
        android:layout_row="2"
        android:onClick="onClickNumberButton"
        android:text="@string/nine"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:onClick="onClickClear"
        android:text="@string/clear"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="3"
        android:layout_row="1"
        android:onClick="onClickModeButton"
        android:text="@string/divide"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="3"
        android:layout_row="2"
        android:onClick="onClickModeButton"
        android:text="@string/multiply"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="3"
        android:layout_row="3"
        android:onClick="onClickModeButton"
        android:text="@string/subtract"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="3"
        android:layout_row="4"
        android:onClick="onClickModeButton"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_column="3"
        android:layout_row="5"
        android:onClick="onClickEquals"
        android:text="@string/equals"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
</GridLayout>

